# Simverse

./: CMakeLists.txt  README.md
src/: framer.cpp  framer.hpp  main.cpp  server.cpp  types.hpp  world.cpp  world.hpp
src/ecs/: Component.h  ComponentManager.h  EntityManager.h  Registry.h  SystemManager.h  Types.h
src/proto/: protocol.hpp
